# django-devcontainer

./: .dockerignore  .pre-commit-config.yaml  LICENSE  README.md  asgi.py  pyproject.toml  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yaml  docker-compose.dev.yml
.devcontainer/doc/: README.md  issues.md  provided-tools.md
.devcontainer/nginx/: nginx.conf
.devcontainer/scripts/: CRLF_to_LF.sh  copy-nginx-conf.sh  django-install.sh  django-message.sh  hello-message.sh  merge-git-template.sh  poetry.sh  post-create.sh  post-start.sh  pre-commit_update.sh  run-production.sh
.devcontainer/scripts/git/: abort-merge-template.sh  add-remote-templates.sh  check-merge-templates.sh  get-remote-template-name.sh  merge-template.sh
apps/users/: admin.py  apps.py  models.py
apps/users/migrations/: 0001_initial.py  0002_user_is_staff.py
config/settings/: __init__.py
config/settings/apps/: __init__.py  auth.py  rest_framework.py  staticfiles.py
config/settings/base/: __init__.py  django.py  email.py  globalization.py
config/settings/development/: __init__.py  django.py
config/settings/production/: __init__.py
config/urls/: __init__.py  base.py  development.py
config/urls/api/: __init__.py
docs/: README.md
scripts/: hello-world.sh
src/: __init__.py  main.py
tests/: test.py
